# Pi_Code_Ny

./: CMakeLists.txt  README.md  hej.txt  main.cpp
Semesterprojekt/: CMakeLists.txt  CMakeLists.txt.user.630676a  CMakeLists.txt.user.ad08e9d  main.cpp
Semesterprojekt2/Semesterprojekt2/: CMakeLists.txt  UR.cpp  UR.h  UR5.cpp  UR5.h  database.cpp  database.h  databasen.cpp  databasen.h  main.cpp  main.cpp.save  motorkontrol.cpp  motorkontrol.h  ur.cpp
Semesterprojekt2/build-Semesterprojekt2-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  Semesterprojekt2  cmake_install.cmake  gripper  qtcsettings.cmake
Semesterprojekt2/build-Semesterprojekt2-Desktop-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-1612e17db73ec43c1b8d.json  cmakeFiles-v1-fcec3619cefb5b8663c7.json  codemodel-v2-6810b27e7bc7ef5fef0b.json  codemodel-v2-b56d92ec648213d96232.json  codemodel-v2-ed381180bede42c89eb5.json  directory-.-Debug-1cb464ed03cc51158fc0.json  index-2024-04-12T09-54-45-0638.json  index-2024-05-06T12-22-00-0388.json  index-2024-05-07T12-16-53-0202.json  index-2024-05-09T08-55-01-0471.json  target-Semesterprojekt2-Debug-31dfeca585581e5b8c92.json  target-Semesterprojekt2-Debug-331fa976476634ae3f13.json  target-Semesterprojekt2-Debug-b8b4d4cfe75cb9af758f.json
Semesterprojekt2/build-Semesterprojekt2-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-aaa15c150bf40fd8a1fc.json  cache-v2-cc6d722ab35688ab064b.json  cache-v2-d1e9cd2f44b2f47809e8.json  cmakeFiles-v1-db5c3b7b4bb16f0526e5.json  codemodel-v2-6682c1b252fef8c3f822.json  codemodel-v2-81ce66d6379cc2a778a6.json  codemodel-v2-a13060a01a7b0c4d58f1.json  directory-.-Debug-9ef2efc59a6401c9b556.json  directory-.-Debug-a503b48136e13a1cc8bc.json  index-2024-04-12T09-53-40-0608.json  index-2024-05-03T10-16-18-0340.json  index-2024-05-09T08-53-40-0673.json  target-Semesterprojekt2-Debug-5d5347053f2dda522e8f.json  target-Semesterprojekt2-Debug-e48ef3046bc6e0ca51bd.json  target-Semesterprojekt2-Debug-f20802afb7ff4c713cdc.json  target-Semesterprojekt2_autogen-Debug-f8dc4c215b24a1854830.json
Semesterprojekt2/build-Semesterprojekt2-Desktop-Debug/Semesterprojekt2_autogen/: moc_predefs.h
Semesterprojekt2/build-Semesterprojekt2-Qt_5_15_8_in_PATH_qt5-Debug/: CMakeCache.txt.prev  Makefile  Semesterprojekt2  cmake_install.cmake
Semesterprojekt2/build-Semesterprojekt2-Qt_5_15_8_in_PATH_qt5-Debug/.cmake/api/v1/reply/: cache-v2-a54ca4788cb435b3b855.json  cmakeFiles-v1-5c5ca9b8cb36514dae75.json  codemodel-v2-0052e800fc66b7b63f43.json  codemodel-v2-3ead14e35a7befb74e9f.json  codemodel-v2-80d4f2017daaf3a34920.json  directory-.-Debug-9ff32c53787ad10f2f02.json  directory-.-Debug-e2ad0b14277985cfb2a7.json  index-2024-05-15T09-09-40-0157.json  index-2024-05-17T07-28-55-0575.json  index-2024-05-20T07-30-45-0075.json  target-Semesterprojekt2-Debug-301571220a16a7d5f592.json  target-Semesterprojekt2-Debug-9d91599af457b0bdf7c8.json
Semesterprojekt2/build-Semesterprojekt2-Qt_5_15_8_in_PATH_qt5-Debug/.cmake/api/v1/reply.prev/: target-Semesterprojekt2-Debug-09469ee979f79611e264.json  target-Semesterprojekt2_autogen-Debug-c774d1ee706c355636c1.json
Semesterprojekt2/build-Semesterprojekt2-Qt_5_15_8_in_PATH_qt5-Debug/Semesterprojekt2_autogen/: moc_predefs.h  mocs_compilation.cpp
Semesterprojekt2/build-Semesterprojekt2-Qt_5_15_8_in_PATH_qt5-Debug/Semesterprojekt2_autogen/EWIEGA46WW/: moc_UR.cpp  moc_UR.cpp.d  moc_UR5.cpp.d
Semesterprojekt2/build-Semesterprojekt2-Qt_5_15_8_in_PATH_qt5-Debug/Semesterprojekt2_autogen/include/: main.moc  main.moc.d
motorkontrol/: CMakeLists.txt  motorkontrol.cpp  motorkontrol.h
